# pam-authramp

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  SECURITY.md  THREAT_MODEL.md
.cargo/: config.toml
.github/workflows/: coverage.yml  release.yml  test.yml
conf/: rampdelay-auth
pam-authramp/: Cargo.toml
pam-authramp/src/: lib.rs  tally.rs
src/: lib.rs  options.rs  settings.rs  tally.rs
tests/: test-pam-auth.rs  test_auth.rs  test_pam_auth.rs
tests/common/: mod.rs  utils.rs
tests/conf/: rampdelay-auth  rampdelay.conf  test-auth  test-rampdelay-authfail  test-rampdelay-preauth
xtask/: Cargo.toml
xtask/src/: main.rs
